--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   path_provider: ^2.1.5
   intl: ^0.17.0
-  charts_flutter: ^0.12.0
+  fl_chart: ^0.69.2
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
