--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   intl: ^0.17.0
   fl_chart: ^0.69.2
   gap: ^3.0.1
+  font_awesome_flutter: ^10.8.0
+  expressions: ^0.2.5+2
 
 dev_dependencies:
   flutter_test:
