--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   gap: ^3.0.1
   font_awesome_flutter: ^10.8.0
   expressions: ^0.2.5+2
+  sqflite: ^2.4.1
 
 dev_dependencies:
   flutter_test:
