Dev : using prompt handle user account

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   sqflite: ^2.4.1
   flutter_launcher_icons: ^0.14.2
   barcode_widget: ^2.0.4
+  flutter_gemini: ^3.0.0
 
 flutter_icons:
   android: true
