--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   barcode_widget: ^2.0.4
   flutter_gemini: ^3.0.0
+  speech_to_text: ^7.0.0
 
 flutter_icons:
   android: true
