--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   barcode_widget: ^2.0.4
   flutter_gemini: ^3.0.0
   speech_to_text: ^7.0.0
+  shared_preferences: ^2.3.4
+  rename_app: ^1.6.1
 
 flutter_icons:
   android: true
